--- a/backend/websocket_test.html
+++ b/backend/websocket_test.html
@@ -33,7 +33,7 @@
 
             stompClient.connect({}, function () {
                     //subscribe(subscribe url,해당 url로 메시지를 받을때마다 실행할 함수)
-                    sub = stompClient.subscribe('/sub/6', function (messageOutput) {
+                    sub = stompClient.subscribe('/sub/1', function (messageOutput) {
                         //e.body에 전송된 data가 들어있다
                         showMessageOutput(JSON.parse(messageOutput.body));
                     });
@@ -53,40 +53,35 @@
         }
 
         function sendJoin2() {
-            stompClient.send("/pub/6/join", {}, JSON.stringify({
+            stompClient.send("/pub/1/join", {}, JSON.stringify({
                 "player": 2
             }));
         }
         function sendJoin3() {
-            stompClient.send("/pub/6/join", {}, JSON.stringify({
+            stompClient.send("/pub/1/join", {}, JSON.stringify({
                 "player": 3
             }));
         }
         function sendJoin4() {
-            stompClient.send("/pub/6/join", {}, JSON.stringify({
+            stompClient.send("/pub/1/join", {}, JSON.stringify({
                 "player": 4
             }));
         }
 
 
         function sendStart() {
-            stompClient.send("/pub/6/start", {}, JSON.stringify({
+            stompClient.send("/pub/1/start", {}, JSON.stringify({
                 "hostPlayer": 1
             }));
         }
 
-        function sendMessage() {
-            stompClient.send("/pub/6/bank", {}, JSON.stringify({
-                "player": 1,
-                "bankId" : 1
+        function sendEventCard() {
+            stompClient.send("/pub/1/eventCard", {}, JSON.stringify({
+                "player": 1 
             }));
         }
-
-        function showMessageOutput(messageOutput) {
-            console.log(messageOutput);
-            const response = document.getElementById('messages');
-            response.value += messageOutput + '\n';
-        }
+ 
+ 
     </script>
 </head>
 <body>
@@ -108,7 +103,7 @@
 </div>
 
 <div class="button-container">
-    <button onclick="sendMessage();">커스텀 테스트</button>
+    <button onclick="sendEventCard();">이벤트 카드 발생 테스트</button>
 </div>
 
 <textarea id="messages" cols="50" rows="10"></textarea>
