Fix: 이벤트 카드 반환 변경

--- a/backend/websocket_test.html
+++ b/backend/websocket_test.html
@@ -98,9 +98,7 @@
         }
 
         function sendEventCard() {
-            stompClient.send("/pub/4/eventCard", {}, JSON.stringify({
-                "player": 1 
-            }));
+            stompClient.send("/pub/1/eventCard", {});
         }
  
  
