--- a/backend/websocket_test.html
+++ b/backend/websocket_test.html
@@ -33,7 +33,7 @@
 
             stompClient.connect({}, function () {
                     //subscribe(subscribe url,해당 url로 메시지를 받을때마다 실행할 함수)
-                    sub = stompClient.subscribe('/sub/3', function (messageOutput) {
+                    sub = stompClient.subscribe('/sub/1', function (messageOutput) {
                         //e.body에 전송된 data가 들어있다
                         //showMessageOutput(JSON.parse(messageOutput.body));
                     });
@@ -53,21 +53,21 @@
         }
 
         function sendJoin2() {
-            stompClient.send("/pub/3/join", {}, JSON.stringify({
-                "player": 2,
-                "nickname" : "1"
+            stompClient.send("/pub/1/join", {}, JSON.stringify({
+                "player": 22,
+                "nickname" : "user111"
             }));
         }
         function sendJoin3() {
-            stompClient.send("/pub/3/join", {}, JSON.stringify({
-                "player": 3,
-                "nickname" : "1"
+            stompClient.send("/pub/1/join", {}, JSON.stringify({
+                "player": 33,
+                "nickname" : "user222"
             }));
         }
         function sendJoin4() {
-            stompClient.send("/pub/3/join", {}, JSON.stringify({
-                "player": 4,
-                "nickname" : "1"
+            stompClient.send("/pub/1/join", {}, JSON.stringify({
+                "player": 44,
+                "nickname" : "user333"
             }));
         }
 
